Fixed horizontal scrolling issue FF

--- a/website/client/Console/Console.css
+++ b/website/client/Console/Console.css
@@ -6,7 +6,7 @@
     background-color: black;
     max-height: 500px;
     overflow-x: hidden;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 #console-history {
